--- a/src/2-matsim-data-preparation.ipynb
+++ b/src/2-matsim-data-preparation.ipynb
@@ -44,15 +44,12 @@
    "outputs": [],
    "source": [
     "# Load libs\n",
-    "import math\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import geopandas as gpd\n",
     "from tqdm import tqdm\n",
     "import dataworkers as dw\n",
     "import matsim\n",
-    "import gzip\n",
-    "import matplotlib.pyplot as plt"
+    "import gzip"
    ],
    "metadata": {
     "collapsed": false,
